--- a/src/i18n/locales/km.json
+++ b/src/i18n/locales/km.json
@@ -18,22 +18,67 @@
     "subtitle": "ដំណោះស្រាយអភិវឌ្ឍន៍ពេញលេញ",
     "rails": {
       "title": "ការអភិវឌ្ឍ Ruby on Rails",
-      "description": "បង្កើតប្រព័ន្ធ backend ដ៏រឹងមាំ និងអាចពង្រីកបានជាមួយ Ruby on Rails។ ពីការអភិវឌ្ឍ API ដល់កម្មវិធី full-stack យើងផ្តល់នូវដំណោះស្រាយគុណភាពខ្ពស់។"
+      "description": "បង្កើតប្រព័ន្ធ backend ដ៏រឹងមាំ និងអាចពង្រីកបានជាមួយ Ruby on Rails។ ពីការអភិវឌ្ឍ API ដល់កម្មវិធី full-stack យើងផ្តល់នូវដំណោះស្រាយគុណភាពខ្ពស់។",
+      "features": {
+        "restfulApis": "RESTful APIs",
+        "databaseDesign": "ការរចនាមូលដ្ឋានទិន្នន័យ",
+        "authentication": "ការផ្ទៀងផ្ទាត់ភាពត្រឹមត្រូវ",
+        "backgrounJobs": "ការងារដំណើរការខាងក្រោយ",
+        "testing": "តេស្ត & CI/CD"
+      }
     },
     "react": {
       "title": "ការអភិវឌ្ឍ ReactJS",
-      "description": "បង្កើតចំណុចប្រទាក់អ្នកប្រើប្រាស់ដ៏ថាមវន្ត និងឆ្លើយតបជាមួយ ReactJS។ យើងបង្កើតកម្មវិធីវេបទំនើបដែលផ្តល់នូវបទពិសោធន៍អ្នកប្រើប្រាស់ពិសេស។"
+      "description": "បង្កើតគេហទំព័រ ដ៏ស្រស់ស្អាត និន មានភាពបត់បែន ដោយប្រើ ReactJS។ យើងបង្កើតកម្មវិធីវេបទំនើបដែលផ្តល់នូវបទពិសោធន៍ដល់អ្នកប្រើប្រាស់អោយកាន់តែងាយស្រួល។",
+      "features": {
+        "componentLibraries": "បណ្ណាល័យសមាសភាគ",
+        "stateManagement": "ការគ្រប់គ្រងស្ថានភាព",
+        "performanceOptimization": "ការបង្កើនប្រសិទ្ធភាព និង ល្បឿនដំណើរការ",
+        "modernTooling": "ឧបករណ៍ទំនើបៗ"
+      }
     },
     "consulting": {
       "title": "ការពិគ្រោះយោបល់បច្ចេកទេស",
-      "description": "ទទួលបានការណែនាំពីអ្នកជំនាញស្តីពីស្ថាបត្យកម្ម ការបង្កើនប្រសិទ្ធភាព និងការអនុវត្តល្អបំផុត។ យើងជួយអ្នកធ្វើការសម្រេចចិត្តបច្ចេកទេសដោយមានព័ត៌មាន។"
+      "description": "ទទួលបានការណែនាំពីអ្នកជំនាញស្តីពីស្ថាបត្យកម្ម ការបង្កើនប្រសិទ្ធភាព និងការអនុវត្តល្អបំផុត។ យើងជួយអ្នកធ្វើការសម្រេចចិត្តបច្ចេកទេសដោយមានព័ត៌មាន។",
+      "features": {
+        "architectureReview": "ការពិនិត្យស្ថាបត្យកម្ម software",
+        "bestPractices": "ការអនុវត្តល្អបំផុត",
+        "teamTraining": "ការបង្រៀន ក្រុមការងារ",
+        "technicalAudits": "ការធ្វើសវនកម្មបច្ចេកទេស"
+      }
+    },
+    "fullstack": {
+      "title": "ដំណោះស្រាយ Full-Stack",
+      "description": "ការរួមបញ្ចូលរវាង Rails backends ជាមួយ React frontends ដែលអាចដំណើការយ៉ាងរលូន។ យើងផ្តល់ជូននូវដំណោះស្រាយពេញលេញដែលអាចផ្តល់អត្ថប្រយោជន៍ពីបច្ចេកវិទ្យាទាំងពីរដ៏ល្អបំផុត។",
+      "features": {
+        "apiIntegration": "ការប្រើប្រាស់ API",
+        "realTimeFeatures": "មុខងារ real-time",
+        "authenticationSecurity": "ប្រពន្ធ័សុវត្ថិភាព និង ការកំណត់ការចូលប្រើប្រាស់",
+        "cloudDeployment": "ការដាក់អោយដំណើរការនៅលើ Cloud"
+      }
     }
   },
   "about": {
     "title": "អំពីយើង",
     "subtitle": "ដៃគូអភិវឌ្ឍន៍ដែលអ្នកទុកចិត្ត",
     "description": "ជាមួយនឹងបទពិសោធន៍ជាច្រើនឆ្នាំក្នុងការអភិវឌ្ឍ Ruby on Rails និង ReactJS យើងមានចំណង់ចំណូលចិត្តក្នុងការបង្កើតដំណោះស្រាយដែលជំរុញភាពជោគជ័យនៃអាជីវកម្ម។ ក្រុមរបស់យើងរួមបញ្ចូលជំនាញបច្ចេកទេសជាមួយការយល់ដឹងយ៉ាងស៊ីជម្រៅអំពីការអនុវត្តល្អបំផុតនៃការអភិវឌ្ឍវេបទំនើប។",
-    "cta": "ស្វែងយល់បន្ថែមអំពីការងាររបស់យើង"
+    "cta": "ស្វែងយល់បន្ថែមអំពីការងាររបស់យើង",
+    "excellence": {
+      "title": "ឧត្តមភាព",
+      "description": "យើងខ្ញុំប្ដេជ្ញាចិត្តក្នុងការផ្តល់ជូននូវដំណោះស្រាយលំដាប់កំពូលដែលលើសពីការរំពឹងទុក។"
+    },
+    "collaboration": {
+      "title": "កិច្ចសហការ",
+      "description": "យើងធ្វើការយ៉ាងជិតស្និទ្ធជាមួយអតិថិជនរបស់យើង ក្នុងនាមជាដៃគូពិតប្រាកដក្នុងភាពជោគជ័យរបស់ពួកគេ។"
+    },
+    "innovation": {
+      "title": "នវានុវត្តន៍",
+      "description": "យើងនាំមុខគេជាមួយនឹងបច្ចេកវិទ្យា និងការអនុវត្តទំនើបៗ។"
+    },
+    "passion": {
+      "title": "ទឹកចិត្ត",
+      "description": "យើងស្រឡាញ់អ្វីដែលយើងធ្វើ ហើយវាបង្ហាញឱ្យឃើញនៅក្នុងគម្រោងនីមួយៗដែលយើងផ្តល់ជូន។"
+    }
   },
   "footer": {
     "tagline": "អ្នកជំនាញ Ruby on Rails និង ReactJS",
@@ -43,7 +88,7 @@
     "title": "ផតហ្វូលីយ៉ូរបស់ខ្ញុំ",
     "subtitle": "បទពិសោធន៍វិជ្ជាជីវៈ និងប្រវត្តិរូប",
     "intro": {
-      "greeting": "ខ្ញុំឈ្មោះ ឃៀវ សុគមេសា",
+      "greeting": "ខ្ញុំឈ្មោះ  ខៀវ សុខមេសា",
       "description": "ជាវិស្វករសូហ្វវែរ Full-Stack កម្រិតខ្ពស់ និងជាអ្នកដឹកនាំបច្ចេកទេសដែលមានបទពិសោធន៍ជាង 15 ឆ្នាំក្នុងការជំរុញភាពជោគជ័យនៃផលិតផលក្នុងបរិយាកាសស្តាតអាប់ដែលមានល្បឿនលឿន។ ខ្ញុំមានជំនាញពេញលេញនៅទូទាំងវដ្តជីវិតនៃការអភិវឌ្ឍន៍សូហ្វវែរ ដោយបានរចនា និងបង្កើតប្រព័ន្ធសំខាន់ៗសម្រាប់ក្រុមហ៊ុនផ្សេងៗ។ ការផ្តោតអារម្មណ៍បច្ចុប្បន្នរបស់ខ្ញុំក្នុងនាមជាអ្នកប្រឹក្សាយោបល់នៅ OnTheGoSystems គឺការប្រើប្រាស់ Ruby on Rails និង ReactJS ដើម្បីអភិវឌ្ឍម៉ាស៊ីនបកប្រែដែលដំណើរការដោយ AI។ សំខាន់បំផុត ប្រវត្តិរបស់ខ្ញុំរួមមានការដឹកនាំការអភិវឌ្ឍដំណោះស្រាយដ៏ត្រឹមត្រូវខ្ពស់ ដូចជា API វាយតម្លៃទ្រព្យសម្បត្តិ (Z1Data) និងការបង្កើតហេដ្ឋារចនាសម្ព័ន្ធហិរញ្ញវត្ថុសំខាន់ៗ រួមទាំង Payment Gateway និង Processor នៅក្រុមហ៊ុនផ្តល់សេវាទូទាត់ធំមួយ (Bongloy Payment PLC)។ ខ្ញុំរីករាយក្នុងការរួមបញ្ចូលជំនាញបច្ចេកទេសយ៉ាងស៊ីជម្រៅជាមួយការដឹកនាំយុទ្ធសាស្ត្រ ដោយបានបម្រើជា Scrum Master និងជាអ្នកណែនាំដើម្បីធានានូវការផ្តល់ជូនប្រកបដោយប្រសិទ្ធភាព និងគុណភាពខ្ពស់នៅក្នុងក្រុមអន្តរជាតិ។"
     },
     "experience": {
@@ -60,6 +105,11 @@
     "year": "ឆ្នាំ",
     "technologies": "បច្ចេកវិទ្យា",
     "viewDemo": "មើលការសាកល្បង",
-    "viewCode": "មើលកូដ"
+    "viewCode": "មើលកូដ",
+    "ptcDescription": "ប្រព័ន្ធបកប្រែភាសារ ដែលប្រើប្រាស់ AI ត្រូវបាន រចនាឡើងសម្រាប់ វិសាលភាពការងារសហគ្រាសធំៗ ប្រកបដោយ សុវត្ថិភាពខ្ពស់ និង សុក្រិតភាព. ត្រូវបានដាក់បញ្ជូល ដោយខួរក្បាល LLM(large language models) ដើម្បីធានាថាការបកប្រែភាសារមានភាព ត្រឹមត្រូវ និង ឆ្លាតវៃ.",
+    "z1DataDescription": "កម្មវិធីដែលអាចធ្វើមាត្រដ្ឋានបានសម្រាប់ការវាយតម្លៃអចលនទ្រព្យដោយស្វ័យប្រវត្តិជាមួយនឹងការរួមបញ្ចូលទិន្នន័យភូមិសាស្ត្រ។ ផ្លល់អោយនូវ API ដែលបានបង្កើតឡើងសម្រាប់វាយតម្លៃទិន្នន័យអចលនទ្រព្យ និងការបង្កើនប្រសិទ្ធភាពការស្វែងរកអោយកាន់តែលឿន។",
+    "bongloyDescription": "ប្រព័ន្ធទូទាត់ប្រាក់ កម្រិតខ្ពស់សម្រាប់ប្រតិបត្តិការអនឡាញដែលមានសុវត្ថិភាព និងអាចទុកចិត្តបាន។ រួមបញ្ចូលជាមួយប្រព័ន្ធទូទាត់ជាច្រើនប្រភេទ រួមទាំង Visa, Mastercard និងច្រើនទៀត។",
+    "vtenhDescription": "ប្រព័ន្ធលក់ទំនិញ online ដែលុយើងបាន បង្កើត API ផ្នែក​ខាងក្រោយ គេហទំព័រ​សម្រាប់​អតិថិជន ដោយមាន ប្រព័ន្ធ​គ្រប់គ្រង​​ស្តុក និង​ការបញ្ជាទិញ។",
+    "depotDescription": "ប្រព័ន្ធសហគ្រាសសម្រាប់ការគ្រប់គ្រងប្រតិបត្តិការភស្តុភារ និងឃ្លាំង។ ការអនុវត្តជាក្រុមដឹកនាំដោយមានការសហការពីភាគីពាក់ព័ន្ធ។"
   }
 }
