add translation to km for article

--- a/src/i18n/locales/km.json
+++ b/src/i18n/locales/km.json
@@ -5,6 +5,7 @@
     "about": "អំពីយើង",
     "portfolio": "ផតហ្វូលីយ៉ូ",
     "projects": "គម្រោង",
+    "articles": "អត្ថបទ",
     "getStarted": "ចាប់ផ្តើម"
   },
   "hero": {
@@ -111,5 +112,22 @@
     "bongloyDescription": "ប្រព័ន្ធទូទាត់ប្រាក់ កម្រិតខ្ពស់សម្រាប់ប្រតិបត្តិការអនឡាញដែលមានសុវត្ថិភាព និងអាចទុកចិត្តបាន។ រួមបញ្ចូលជាមួយប្រព័ន្ធទូទាត់ជាច្រើនប្រភេទ រួមទាំង Visa, Mastercard និងច្រើនទៀត។",
     "vtenhDescription": "ប្រព័ន្ធលក់ទំនិញ online ដែលុយើងបាន បង្កើត API ផ្នែក​ខាងក្រោយ គេហទំព័រ​សម្រាប់​អតិថិជន ដោយមាន ប្រព័ន្ធ​គ្រប់គ្រង​​ស្តុក និង​ការបញ្ជាទិញ។",
     "depotDescription": "ប្រព័ន្ធសហគ្រាសសម្រាប់ការគ្រប់គ្រងប្រតិបត្តិការភស្តុភារ និងឃ្លាំង។ ការអនុវត្តជាក្រុមដឹកនាំដោយមានការសហការពីភាគីពាក់ព័ន្ធ។"
+  },
+  "articles": {
+    "title": "បញ្ជីអត្ថបទ",
+    "subtitle": "ការអនុវត្តដ៏ល្អ និង ការយល់ដឹង",
+    "categories": {
+      "all": "ទាំងអស់",
+      "rails": "Ruby on Rails",
+      "react": "ReactJS",
+      "fullstack": "Full-Stack",
+      "devops": "DevOps"
+    },
+    "minRead": "នាទី សម្រាប់អាន",
+    "readMore": "អានបន្ថែម",
+    "backToArticles": "ត្រលប់ទៅកាន់បញ្ជីអត្ថបទ",
+    "notFound": "អត្ថបទមិនអាចរកឃើញទេ",
+    "noArticles": "អត្ថបទមិនអាចរកឃើញទេ សម្រាប់អត្ថបទប្រភេទនេះ",
+    "tags": "Tags"
   }
 }
