improve home page

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -12,7 +12,8 @@
     "title": "Ruby on Rails & ReactJS Experts",
     "subtitle": "Transform Your Ideas into Powerful Web Applications",
     "description": "We specialize in building scalable, high-performance web applications using Ruby on Rails and ReactJS. From MVP to enterprise solutions, we deliver excellence.",
-    "cta": "Start Your Project"
+    "cta": "Book a call to discuss your project with us",
+    "exploreServices": "Explore Our Services"
   },
   "services": {
     "title": "Our Services",
