--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -12,7 +12,8 @@
     "title": "Expertos en Ruby on Rails y ReactJS",
     "subtitle": "Transforme Sus Ideas en Aplicaciones Web Potentes",
     "description": "Nos especializamos en construir aplicaciones web escalables y de alto rendimiento usando Ruby on Rails y ReactJS. Desde MVP hasta soluciones empresariales, entregamos excelencia.",
-    "cta": "Inicie Su Proyecto"
+    "cta": "Comience a Discutir Su Proyecto Con Nosotros",
+    "exploreServices": "Explorar Nuestros Servicios"
   },
   "services": {
     "title": "Nuestros Servicios",
