--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -12,7 +12,8 @@
     "title": "Experts Ruby on Rails et ReactJS",
     "subtitle": "Transformez Vos Idées en Applications Web Puissantes",
     "description": "Nous nous spécialisons dans la création d'applications web évolutives et performantes utilisant Ruby on Rails et ReactJS. Du MVP aux solutions d'entreprise, nous livrons l'excellence.",
-    "cta": "Démarrez Votre Projet"
+    "cta": "Discutez de Votre Projet Avec Nous",
+    "exploeServices": "Explorer Nos Services"
   },
   "services": {
     "title": "Nos Services",
