--- a/src/i18n/locales/km.json
+++ b/src/i18n/locales/km.json
@@ -12,7 +12,8 @@
     "title": "អ្នកជំនាញ Ruby on Rails និង ReactJS",
     "subtitle": "បំប្លែងគំនិតរបស់អ្នកទៅជាកម្មវិធីវេបដ៏មានកម្លាំង",
     "description": "យើងមានជំនាញក្នុងការបង្កើតកម្មវិធីវេបដែលអាចពង្រីក និងមានប្រសិទ្ធភាពខ្ពស់ដោយប្រើ Ruby on Rails និង ReactJS។ ពី MVP ដល់ដំណោះស្រាយសហគ្រាស យើងផ្តល់នូវភាពឥតខ្ចោះ។",
-    "cta": "ចាប់ផ្តើមគម្រោងរបស់អ្នក"
+    "cta": "ចាប់ផ្តើមពិភាក្សាគម្រោងរបស់អ្នក",
+    "exploreServices": "ស្វែងយល់អំពីសេវាកម្មរបស់យើង"
   },
   "services": {
     "title": "សេវាកម្មរបស់យើង",
