add missing translation

--- a/src/i18n/locales/km.json
+++ b/src/i18n/locales/km.json
@@ -89,6 +89,9 @@
   "portfolio": {
     "title": "ផតហ្វូលីយ៉ូរបស់ខ្ញុំ",
     "subtitle": "បទពិសោធន៍វិជ្ជាជីវៈ និងប្រវត្តិរូប",
+    "interestedInWorkingTogether": "ចាប់អារម្មណ៍ក្នុងការធ្វើការជាមួយគ្នា?",
+    "letDiscussYourProject": "ចាប់ផ្តើមពិភាក្សាអំពីរបៀបដែលបទពិសោធន៍របស់ខ្ញុំដើម្បីអាចជួយកសាងគម្រោងរបស់អ្នក",
+    "getInTouch": "ធ្វើការទំនាក់ទំនង",
     "intro": {
       "greeting": "ខៀវ សុខមេសា",
       "description": "ខ្ញុំជាវិស្វករសូហ្វវែរ Full-Stack កម្រិតខ្ពស់ និងជាអ្នកដឹកនាំបច្ចេកទេសដែលមានបទពិសោធន៍ជាង 15 ឆ្នាំក្នុងការជំរុញភាពជោគជ័យនៃផលិតផលក្នុងបរិយាកាសស្តាតអាប់ដែលមានល្បឿនលឿន។ ខ្ញុំមានជំនាញពេញលេញនៅទូទាំងវដ្តជីវិតនៃការអភិវឌ្ឍន៍សូហ្វវែរ ដោយបានរចនា និងបង្កើតប្រព័ន្ធសំខាន់ៗសម្រាប់ក្រុមហ៊ុនផ្សេងៗ។ ការផ្តោតអារម្មណ៍បច្ចុប្បន្នរបស់ខ្ញុំក្នុងនាមជាអ្នកប្រឹក្សាយោបល់នៅ OnTheGoSystems គឺការប្រើប្រាស់ Ruby on Rails និង ReactJS ដើម្បីអភិវឌ្ឍម៉ាស៊ីនបកប្រែដែលដំណើរការដោយ AI។ សំខាន់បំផុត ប្រវត្តិរបស់ខ្ញុំរួមមានការដឹកនាំការអភិវឌ្ឍដំណោះស្រាយដ៏ត្រឹមត្រូវខ្ពស់ ដូចជា API វាយតម្លៃទ្រព្យសម្បត្តិ (Z1Data) និងការបង្កើតហេដ្ឋារចនាសម្ព័ន្ធហិរញ្ញវត្ថុសំខាន់ៗ រួមទាំង Payment Gateway និង Processor នៅក្រុមហ៊ុនផ្តល់សេវាទូទាត់ធំមួយ (Bongloy Payment PLC)។ ខ្ញុំរីករាយក្នុងការរួមបញ្ចូលជំនាញបច្ចេកទេសយ៉ាងស៊ីជម្រៅជាមួយការដឹកនាំយុទ្ធសាស្ត្រ ដោយបានបម្រើជា Scrum Master និងជាអ្នកណែនាំដើម្បីធានានូវការផ្តល់ជូនប្រកបដោយប្រសិទ្ធភាព និងគុណភាពខ្ពស់នៅក្នុងក្រុមអន្តរជាតិ។"
